--- a/app/globals.css
+++ b/app/globals.css
@@ -121,3 +121,42 @@ html {
   padding: 0;
   box-sizing: border-box;
 }
+
+@keyframes slideRight {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideLeft {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.animate-slide-right {
+  animation: slideRight 1s ease-in-out;
+}
+
+.animate-slide-left {
+  animation: slideLeft 1s ease-in-out;
+}
+
+.animate-fade-in {
+  animation: fadeIn 2s ease-in-out;
+}
