--- a/app/globals.css
+++ b/app/globals.css
@@ -140,7 +140,7 @@ html {
   }
 }
 
-@keyframes fadeIn {
+@keyframes fadeInAboutUs {
   from {
     opacity: 0;
   }
@@ -158,5 +158,8 @@ html {
 }
 
 .animate-fade-in {
-  animation: fadeIn 2s ease-in-out;
+  animation: fadeInAboutUs 2s ease-in-out;
+}
+.animate-fade-in-services {
+  animation: fadeIn 1s ease-in-out;
 }
