Finish Reviews Section

--- a/app/globals.css
+++ b/app/globals.css
@@ -189,6 +189,18 @@ html {
   z-index: 10;
 }
 
+.embla__button__video {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #e02a20;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  z-index: 10;
+}
+
 .embla__ .embla__button--prev {
   left: 1rem;
 }
